Initial commit supporting: Making the same contribution for 48 months as a new user

--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,10 @@ npm-debug.log
 yarn-debug.log
 yarn-error.log
 
-    
+
+/build/
+/.idea/
+/.gradle/
+credentials.properties
+gradlew
+gradlew.bat
